1998-11-23  Jim Kingdon

	* sanity.sh (dirs): Update for yesterday's change in Find_Names
	error handling.  The error in dirs-4 is fairly different now; in
	dirs-3 and dirs-3a it is the obvious change.

1998-11-22  Jim Kingdon

	* sanity.sh (release): Move the commments listing "cvs release"
	tests from modules2-6 to here.
	* release.c (release): Update comment to reflect "? foo" case.

	* find_names.c (Find_Names): If we can't read the repository, make
	it a nonfatal error.  Tell the caller whether this happened.
	(find_rcs): Add comment regarding this behavior.
	* recurse.c (do_recursion): If Find_Names gives an error, skip
	the directory and print a message saying so.
	* sanity.sh (modes3): New test, for this.

1998-11-18  Jim Kingdon

	* rtag.c (rtag_usage), tag.c (tag_usage): Use "-r rev"
	consistently.

	* sanity.sh (conflicts3): Tests conflicts3-24 through
	conflicts3-28 test for another case similar to conflicts3-22.

1998-11-14  Jim Kingdon

	* sanity.sh (diff): New test, for now just tests for the "I know
	nothing" message.

	* sanity.sh (conflicts2-142b7 through conflicts2-142b11): New
	tests; resurrecting doesn't work from one level up.

	* sanity.sh (mwrap-7): Remote prints the messages in a different
	order.

1998-11-13  Jim Kingdon

	* tag.c (check_fileproc): Log tag deletions.
	* rtag.c (check_fileproc): Likewise.
	* sanity.sh (taginfo-14 through taginfo-18): New tests, for
	these behaviors.

1998-11-12  Jim Kingdon

	* sanity.sh (mwrap-7): Update for the noexec fix.

	* server.c (server_copy_file): Add comment about noexec.

	* update.c (checkout_file): Handle noexec case involving revbuf
	and modes.
	(update_fileproc): In case T_NEEDS_MERGE, let merge_file take care
	of noexec, so it can tell the user if there would be conflicts.
	(merge_file): Print "conflicts found in FILE" message
	regardless of noexec.  Add comment about checking for whether the
	file already contained the changes, and noexec.
	* sanity.sh (conflicts-192a): New test, for this.